# NutMeg

./: .gitignore  README.md  RELEASE.md  requirements.txt  setup.cfg  setup.py
ffmpeg_help/: ffmpeg_codecs.txt  ffmpeg_decoders.txt  ffmpeg_encoder_dnxhd.txt  ffmpeg_encoder_libvpx.txt  ffmpeg_encoder_libvpx_vp9.txt  ffmpeg_encoder_wmv2.txt  ffmpeg_encoder_x264.txt  ffmpeg_encoders.txt  ffmpeg_filter_vidstabdetect.txt  ffmpeg_filter_vidstabtransform.txt  ffmpeg_filters.txt  ffmpeg_help_full.txt  ffmpeg_help_long.txt  ffmpeg_muxer_asf.txt  ffmpeg_muxer_avi.txt  ffmpeg_muxer_dash.txt  ffmpeg_muxer_image2.txt  ffmpeg_muxer_image2pipe.txt  ffmpeg_muxer_mp4.txt  ffmpeg_muxer_webm.txt  ffmpeg_muxer_webm_chunk.txt  ffmpeg_muxer_webm_dash_manifest.txt  ffmpeg_muxers.txt  ffmpeg_protocols.txt  readme.md  x264_help_full.txt
nutmeg/: __init__.py  examples.py  namespace.py  processor.py
nutmeg/examples/: example_clip.py  example_intra.py  example_probe.py
