[metadata]
name = nutmeg
author = Pierre V. Villeneuve
author_email = pierre.villeneuve@gmail.com
description = Simple video processing tools using Python with fmpeg
long_description = file: README.md
url = https://github.com/Who8MyLunch/NutMeg
keywords = video, ffmpeg, intra, clip, probe

[options]
zip_safe = True

[bdist_wheel]
universal = True

[sdist]
keep-temp = False

[clean]
all = True



